--- a/Estilos.CSS
+++ b/Estilos.CSS
@@ -1,6 +1,6 @@
 *{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color: rgba(247, 68, 202, 0.082);
+    background-color: rgba(241, 161, 217, 0.082);
     box-sizing: border-box;
 }
 
@@ -8,6 +8,7 @@ body {
     width: 100%;
     margin-top: 0%;
 }
+
 
 /* ======= BODY =======*/
 
@@ -50,8 +51,6 @@ body {
 }
 
 
-
-
         /* HEADER */
 
 
@@ -68,29 +67,33 @@ header {
 .secciondearriba{
     display: flex;
     justify-content: space-evenly;
-    margin-top: 0%;
+    margin: 0%;
+    background: #690269d5;
+    border-bottom: 2px solid black;
+
 }
 
 .seccion {
-    
     padding: 8px;
-
     transition: all 0.5s;
     list-style: none;
+    background: local;
 }
 
 
 .seccion:hover{ 
-    background-color: rgba(238, 12, 181, 0.226);
-    border-radius: 25px;
+    background-color: rgba(83, 0, 0, 0.63);
+    border-radius: 10px;
     transition: all 0.5s;
-    padding: 10px;
+    padding: 15px;
+    text-decoration: none;
+    color: white;
 }
 
-a {
+.seccion a{
     text-decoration: none;
-    color: black;
-    
+    color: white;
+    background: local;
 }
 
 .btn_menu {
@@ -106,18 +109,15 @@ a {
     display: flex;
     left: 0;
     top: 45%;
-
     align-items: flex-start;
     z-index: 100;
     height: fit-content;
 }
 
-
-
 .icon {
     color: white;
     text-decoration: none;
-    padding: 1rem;
+    padding: 1%;
     display: flex;
     width: 5%;
     height: fit-content;
@@ -159,6 +159,15 @@ a {
 .d-flex {
     display: flex!important;
     width: inherit;
+    height: 250px;
+}
+
+/* logo cuando seleccionan el producto */
+
+.logo_en_producto{
+    width: 95%;
+    height: 250px;
+    background: local;
 }
 
 
@@ -193,7 +202,7 @@ a {
 
 .category_list .category_item{
     display: block;
-    width: 90%;
+    width: auto;
     padding: 5%;
     margin-bottom: 15px;
     background-color: rgba(255, 2, 44, 0.233);
@@ -332,17 +341,17 @@ a {
 .btnfinalizar {
     background-color: rgb(226, 87, 134);
     border-radius: 20rem;
-    padding: 2%;
+    padding: 1.5%;
     border: 2px solid black;
-    box-shadow: black;
+
 }
 
 .btnseguir {
     background-color: rgb(252, 113, 217);
     border-radius: 20rem;
-    padding: 2%;
+    padding: 1.5%;
     border: 2px solid black;
-    box-shadow: black;
+
     
 }
 
@@ -412,7 +421,12 @@ a {
 }
 
         
- 
+            /* REGISTRO */
+#registro{
+    display: flex;
+    flex-direction: column;
+}
+
 
 
         /* FOOTER */
@@ -423,6 +437,10 @@ footer {
 
 
 }
+
+
+
+
 
 
 
@@ -495,10 +513,9 @@ footer {
     .seccion {
         display: flex;
         padding: 1%;
-        border: 2px solid #410121bd;
-        height: max-content;
         border-radius: 25px;
         transition: all 0.5s;
+        background: local;
     
     }
     
@@ -510,10 +527,9 @@ footer {
         padding: 15px;
     }
     
-    a {
+    .seccion a {
         text-decoration: none;
-        color: black;
-        font-size: small;
+        color: rgb(255, 255, 255);
     }
      
 
