--- a/SASS/origen.scss
+++ b/SASS/origen.scss
@@ -14,9 +14,6 @@
 /* REGISTRO */
 /* FOOTER */
 
-@import "responsive";
-
-
 
 * {
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -100,6 +97,7 @@ header {
 	align-items: flex-start;
 	z-index: 100;
 	height: fit-content;
+	position: sticky;
 }
 .icon {
 	color: white;
@@ -317,3 +315,5 @@ footer {
 	grid-area: pie;
 	background-color: rgb(216, 8, 42);
 }
+
+@import "_responsive"; 
