--- a/CSS/destino.css
+++ b/CSS/destino.css
@@ -555,16 +555,12 @@ footer {
   }
 
   .social-bar {
-    position: fixed;
     left: 0;
-    top: 45%;
-    font-size: 0.05rem;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     z-index: 100;
     height: fit-content;
-    position: absolute;
     top: 0%;
     position: absolute;
     top: 0%;
@@ -590,14 +586,16 @@ footer {
   .icon-facebook2 {
     background: #2c0394;
     color: white;
-    border-radius: 10px;
+    border-radius: 5px;
     float: left;
+    padding: 10px;
   }
 
   .icon-instagram {
     background: #cc21b0;
-    border-radius: 10px;
+    border-radius: 5px;
     float: left;
+    padding: 10px;
   }
 
   .envioflores {
@@ -632,6 +630,7 @@ footer {
     width: 95%;
     display: flex;
     margin: 1%;
+    border-radius: 15px;
   }
   .product-item:hover {
     -webkit-box-shadow: 10px 10px 14px 2px rgba(0, 0, 0, 0.47);
@@ -645,6 +644,7 @@ footer {
     color: #fff;
     text-align: center;
     text-decoration: none;
+    border-radius: 10px;
   }
   .product-item img {
     object-fit: contain;
@@ -684,6 +684,7 @@ footer {
     transition: all 0.6s;
     font-size: 16px;
     font-family: bold;
+    border-radius: 15px;
   }
   .category_list .category_item:hover {
     -webkit-box-shadow: 10px 10px 14px 2px rgba(0, 0, 0, 0.47);
