--- a/Estilos.CSS
+++ b/Estilos.CSS
@@ -455,6 +455,7 @@ footer {
              ;
 
         grid-template-rows: min-content;
+        grid-template-columns: 20% 80%;
         grid-column-gap: 2%;
         grid-row-gap: 2%;
         margin: 0%;
@@ -563,8 +564,10 @@ footer {
     
     
     .product-item a{
-        display: block;
+        display: flex;
+        flex-direction: column;
         width: 100%;
+        height: 350px;
         background-color: rgba(46, 2, 13, 0.76);
         padding-top: 0%;
         color: #fff;
@@ -575,7 +578,7 @@ footer {
     .product-item img {
         width: inherit;
         object-fit: contain;
-    
+        height: 320px;
     } 
     /* categorias vista movil */
     
@@ -613,6 +616,12 @@ footer {
     transition: all 0.6s;
 
 }
+
+.category_list .ct_item-active { 
+    background-color: rgba(133, 17, 75, 0.829);
+}
+
+
 }
 
 
@@ -824,13 +833,7 @@ a {
 
 /* productos vista dispositivos */
 
-.product-item {
-    width: inherit;
-    height: 40vw;
-    display: flex;
-    margin: 1%;
-    object-fit: contain;
-}
+
 
 
     /* categorias vista movil */
@@ -848,6 +851,7 @@ a {
     display: flex;
     flex-direction: column;
     width: 100%;
+    
 
  }
 
@@ -863,6 +867,7 @@ a {
     text-decoration: solid;
     color: white;
     transition: all 0.6s;
+    border-radius: 8px;
 
 }
 
