--- a/SASS/_responsive.scss
+++ b/SASS/_responsive.scss
@@ -34,6 +34,7 @@
         "categoria productos"
         "pie pie";
 		grid-template-rows: min-content;
+		grid-template-columns: 20% 80%;
 		grid-column-gap: 2%;
 		grid-row-gap: 5%;
 		margin: 0%;
@@ -121,10 +122,12 @@
 			color: #fff;
 			text-align: center;
 			text-decoration: none;
+			height: 350px;
 		}
 		img {
 			width: inherit;
 			object-fit: contain;
+			height: 320px;
 		}
 	}
 	.navmenu {
@@ -149,16 +152,7 @@
 		width: 100%;
 		.category_item {
 			display: block;
-			width: 90%;
-			padding: 10px;
-			margin-bottom: 15px;
-			background-color: rgba(255, 2, 44, 0.233);
-			text-align: center;
-			text-decoration: solid;
-			color: white;
-			transition: all 0.6s;
-			display: block;
-			width: 90%;
+			width: 100%;
 			padding: 10px;
 			margin-bottom: 15px;
 			background-color: rgba(255, 2, 44, 0.233);
