--- a/CSS/destino.css
+++ b/CSS/destino.css
@@ -61,8 +61,9 @@ header {
   display: flex;
   justify-content: space-evenly;
   margin: 0%;
-  background: rgba(105, 2, 105, 0.8352941176);
+  background: linear-gradient(#ff00a5, #58025a);
   border-bottom: 2px solid black;
+  padding: 5;
 }
 
 .seccion {
@@ -276,45 +277,64 @@ nav {
   display: grid;
   grid-template-areas: "adic adic" "ferrero choco" "vinos peluche" "globo globonum";
   height: 100%;
-  grid-template-columns: 50%;
   grid-auto-rows: 0fr 3fr 3fr 3fr;
-  background-color: white;
+  background: white;
+  grid-template-columns: 350% 350%;
+  justify-items: center;
+  align-items: center;
 }
 
 .adic {
   grid-area: adic;
   height: fit-content;
-  width: 100%;
 }
 
 .ferrero {
   grid-area: ferrero;
   display: flex;
+  align-items: center;
+  align-content: center;
+  flex-direction: column;
 }
 
 .chocolates {
   grid-area: choco;
   display: flex;
+  align-items: center;
+  align-content: center;
+  flex-direction: column;
 }
 
 .vinos {
   grid-area: vinos;
   display: flex;
+  align-items: center;
+  align-content: center;
+  flex-direction: column;
 }
 
 .peluches {
   grid-area: peluche;
   display: flex;
+  align-items: center;
+  align-content: center;
+  flex-direction: column;
 }
 
 .goblo {
   grid-area: globo;
   display: flex;
+  align-items: center;
+  align-content: center;
+  flex-direction: column;
 }
 
 .globosnum {
   grid-area: globonum;
   display: flex;
+  align-items: center;
+  align-content: center;
+  flex-direction: column;
 }
 
 .produadic {
@@ -422,7 +442,7 @@ footer {
     display: grid;
     grid-area: productos;
     justify-items: center;
-    grid-template-columns: 80%;
+    grid-template-columns: 45% 45%;
     grid-row-gap: 10px;
     padding-top: 0.5%;
     grid-auto-rows: 450px;
@@ -453,19 +473,21 @@ footer {
     box-shadow: 10px 10px 14px 2px rgba(0, 0, 0, 0.47);
   }
   .product-item a {
-    display: block;
+    display: flex;
+    flex-direction: column;
     width: 100%;
     background-color: rgba(46, 2, 13, 0.76);
     padding-top: 0%;
     color: #fff;
     text-align: center;
     text-decoration: none;
-    height: 350px;
+    height: 450px;
+    border-radius: 18px;
   }
   .product-item img {
     width: inherit;
-    object-fit: contain;
-    height: 320px;
+    border-radius: 10px;
+    height: 400px;
   }
 
   .navmenu {
@@ -501,6 +523,9 @@ footer {
     text-decoration: solid;
     color: white;
     transition: all 0.6s;
+  }
+  .category_list .ct_item-active {
+    background-color: rgba(133, 17, 75, 0.829);
   }
 }
 @media screen and (max-width: 500px) {
@@ -604,10 +629,13 @@ footer {
   }
 
   #productos {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-area: productos;
     justify-items: center;
-    box-sizing: border-box;
+    grid-template-columns: 45% 45%;
+    grid-row-gap: 10px;
+    padding-top: 0.5%;
+    grid-auto-rows: 200px;
     object-fit: contain;
     width: inherit;
   }
@@ -634,18 +662,19 @@ footer {
     box-shadow: 10px 10px 14px 2px rgba(0, 0, 0, 0.47);
   }
   .product-item a {
-    display: block;
+    display: flex;
+    flex-direction: column;
     width: 100%;
-    padding: 8px 0;
-    background-color: rgba(46, 2, 13, 0.76);
+    background: linear-gradient(rgba(251, 249, 251, 0), #993668);
+    padding-top: 0%;
     color: #fff;
     text-align: center;
-    text-decoration: none;
-    border-radius: 10px;
+    height: 200px;
+    border-radius: 18px;
+    align-items: center;
   }
   .product-item img {
-    object-fit: contain;
-    width: 150px;
+    width: 100%;
     height: 155px;
     background: #603942;
   }
