--- a/SASS/_responsive.scss
+++ b/SASS/_responsive.scss
@@ -87,7 +87,7 @@
 		display: grid;
 		grid-area: productos;
 		justify-items: center;
-		grid-template-columns: 80%;
+		grid-template-columns: 45% 45%;
 		grid-row-gap: 10px;
 		padding-top: 0.5%;
 		grid-auto-rows: 450px;
@@ -115,19 +115,21 @@
 			box-shadow: 10px 10px 14px 2px rgba(0,0,0,0.47);
 		}
 		a {
-			display: block;
+			display: flex;
+			flex-direction: column;
 			width: 100%;
 			background-color: rgba(46, 2, 13, 0.76);
 			padding-top: 0%;
 			color: #fff;
 			text-align: center;
 			text-decoration: none;
-			height: 350px;
+			height: 450px;
+			border-radius: 18px;
 		}
 		img {
 			width: inherit;
-			object-fit: contain;
-			height: 320px;
+			border-radius: 10px;
+			height: 400px;
 		}
 	}
 	.navmenu {
@@ -160,6 +162,9 @@
 			text-decoration: solid;
 			color: white;
 			transition: all 0.6s;
+		}
+		.ct_item-active {
+			background-color: rgba(133, 17, 75, 0.829);
 		}
 	}
 }
@@ -256,10 +261,13 @@ header {
 		padding: 0%;
 	}
 	#productos {
-		display: flex;
-		flex-direction: column;
+		display: grid;
+		grid-area: productos;
 		justify-items: center;
-		box-sizing: border-box;
+		grid-template-columns: 45% 45%;
+		grid-row-gap: 10px;
+		padding-top: 0.5%;
+		grid-auto-rows: 200px;
 		object-fit: contain;
 		width: inherit;
 		
@@ -284,18 +292,20 @@ header {
 			box-shadow: 10px 10px 14px 2px rgba(0,0,0,0.47);
 		}
 		a {
-			display: block;
+			display: flex;
+			flex-direction: column;
 			width: 100%;
-			padding: 8px 0;
-			background-color: rgba(46, 2, 13, 0.76);
+			background: linear-gradient(#fbf9fb00, #993668);
+			padding-top: 0%;
 			color: #fff;
 			text-align: center;
-			text-decoration: none;
-			border-radius: 10px;
+			height: 200px;
+			border-radius: 18px;
+			align-items: center;
 		}
 		img {
-			object-fit: contain;
-			width: 150px;
+			
+			width: 100%;
 			height: 155px;
 			background: #603942;
 		}
