--- a/SASS/origen.scss
+++ b/SASS/origen.scss
@@ -61,11 +61,12 @@ header {
 	background-color: white;
 }
 .secciondearriba {
-	display: flex;
-	justify-content: space-evenly;
-	margin: 0%;
-	background: #690269d5;
-	border-bottom: 2px solid black;
+    display: flex;
+    justify-content: space-evenly;
+    margin: 0%;
+    background: linear-gradient(#ff00a5, #58025a);
+    border-bottom: 2px solid black;
+    padding: 5;
 }
 .seccion {
 	padding: 8px;
@@ -270,42 +271,73 @@ nav {
 }
 
 #adicionales {
-	display: grid;
-	grid-template-areas: "adic adic" "ferrero choco" "vinos peluche" "globo globonum";
-	height: 100%;
-	grid-template-columns: 50%;
-	grid-auto-rows: 0fr 3fr 3fr 3fr;
-	background-color: white;
+    display: grid;
+    grid-template-areas:
+        "adic adic"
+        "ferrero choco"
+        "vinos peluche"
+        "globo globonum";
+    height: 100%;
+    grid-auto-rows: 0fr 3fr 3fr 3fr;
+    background: white;
+    grid-template-columns: 350% 350%;
+    justify-items: center;
+    align-items: center;
 }
-.adic {
-	grid-area: adic;
-	height: fit-content;
-	width: 100%;
+
+.adic{
+    grid-area: adic;
+    height: fit-content;
+
 }
-.ferrero {
-	grid-area: ferrero;
-	display: flex;
+.ferrero{
+    grid-area: ferrero;
+    display: flex;
+    align-items: center;
+    align-content: center;
+    flex-direction: column;
+    
 }
 .chocolates {
-	grid-area: choco;
-	display: flex;
+    grid-area: choco;
+    display: flex;
+    align-items: center;
+    align-content: center;
+    flex-direction: column;
 }
+
 .vinos {
-	grid-area: vinos;
-	display: flex;
+    grid-area: vinos;
+    display: flex;
+    align-items: center;
+    align-content: center;
+    flex-direction: column;
 }
+
 .peluches {
-	grid-area: peluche;
-	display: flex;
+    grid-area: peluche;
+    display: flex;
+    align-items: center;
+    align-content: center;
+    flex-direction: column;
 }
+
 .goblo {
-	grid-area: globo;
-	display: flex;
+    grid-area: globo;
+    display: flex;
+    align-items: center;
+    align-content: center;
+    flex-direction: column;
 }
+
 .globosnum {
-	grid-area: globonum;
-	display: flex;
+    grid-area: globonum;
+    display: flex;
+    align-items: center;
+    align-content: center;
+    flex-direction: column;
 }
+
 .produadic {
 	width: 150px;
 	height: 150px;
