--- a/CSS/destino.css
+++ b/CSS/destino.css
@@ -13,6 +13,13 @@
 /* ADICIONALES */
 /* REGISTRO */
 /* FOOTER */
+.category_list .category_item, .secciondearriba {
+  background: linear-gradient(rgba(255, 29, 29, 0.6352941176), #850042);
+  font-family: cursive;
+  border-bottom: 2px solid rgb(78, 0, 48);
+  padding: 5;
+}
+
 * {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background-color: rgba(241, 161, 217, 0.082);
@@ -61,9 +68,6 @@ header {
   display: flex;
   justify-content: space-evenly;
   margin: 0%;
-  background: linear-gradient(#ff00a5, #58025a);
-  border-bottom: 2px solid black;
-  padding: 5;
 }
 
 .seccion {
@@ -171,9 +175,7 @@ nav {
 .category_list .category_item {
   display: block;
   width: auto;
-  padding: 5%;
   margin-bottom: 15px;
-  background-color: rgba(255, 2, 44, 0.233);
   text-align: center;
   text-decoration: solid;
   color: white;
@@ -218,14 +220,16 @@ nav {
   box-shadow: 10px 10px 14px 2px rgba(104, 0, 0, 0.952);
 }
 .product-item a {
-  display: block;
   width: 100%;
-  padding: 0;
-  background-color: rgba(46, 2, 13, 0.76);
-  color: #fff;
+  height: 350px;
+  background-color: rgba(173, 2, 45, 0.507);
+  border-radius: 10px;
   text-align: center;
   text-decoration: none;
-  border-radius: 10px;
+  color: white;
+  font-family: cursive;
+  display: block;
+  padding: 0;
 }
 .product-item img {
   width: 100%;
