--- a/SASS/origen.scss
+++ b/SASS/origen.scss
@@ -14,6 +14,28 @@
 /* REGISTRO */
 /* FOOTER */
 
+@mixin producto($ancho, $alto, $color) {
+	width: $ancho;
+	height: $alto;
+	background-color: $color;
+	border-radius: 10px;
+	text-align: center;
+ 	text-decoration: none;
+	color: white;
+	font-family: cursive;
+}
+
+
+
+
+
+%estilo {
+	background: linear-gradient(#ff1d1da2, #850042);
+	font-family: cursive;
+	border-bottom: 2px solid rgb(78, 0, 48);
+    padding: 5;
+	
+}
 
 * {
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -61,12 +83,12 @@ header {
 	background-color: white;
 }
 .secciondearriba {
-    display: flex;
+    
+	@extend %estilo;
+
+	display: flex;
     justify-content: space-evenly;
     margin: 0%;
-    background: linear-gradient(#ff00a5, #58025a);
-    border-bottom: 2px solid black;
-    padding: 5;
 }
 .seccion {
 	padding: 8px;
@@ -163,9 +185,11 @@ nav {
     .category_item {
 		display: block;
 		width: auto;
-		padding: 5%;
+	
+		@extend %estilo;
+
 		margin-bottom: 15px;
-		background-color: rgba(255, 2, 44, 0.233);
+		
 		text-align: center;
 		text-decoration: solid;
 		color: white;
@@ -213,14 +237,10 @@ nav {
 	}
 	
     a {
+		@include producto (100%, 350px, rgba(173, 2, 45, 0.507));
 		display: block;
-		width: 100%;
 		padding: 0;
-		background-color: rgba(46, 2, 13, 0.76);
-		color: #fff;
-		text-align: center;
-		text-decoration: none;
-		border-radius: 10px;
+
 	}
 	
     img {
