--- a/CSS/destino.css
+++ b/CSS/destino.css
@@ -86,10 +86,6 @@ header {
   background: local;
 }
 
-.btn_menu {
-  display: none;
-}
-
 .social-bar {
   display: flex;
   left: 0;
@@ -167,6 +163,7 @@ nav {
   width: 100%;
   scroll-snap-align: center;
   margin: 0%;
+  list-style: none;
 }
 .category_list .category_item {
   display: block;
@@ -187,6 +184,19 @@ nav {
 }
 .category_list .ct_item-active {
   background-color: rgba(133, 17, 75, 0.829);
+}
+
+.menubtn {
+  font-size: 30px;
+  float: left;
+  line-height: 100px;
+  cursor: pointer;
+  display: none;
+  margin: 20px;
+}
+
+#abrirmenu {
+  display: none;
 }
 
 #productos {
@@ -537,6 +547,7 @@ footer {
   }
 
   #grid-area {
+    grid-row-gap: 2px;
     flex-direction: column;
     margin: 0%;
     box-sizing: border-box;
@@ -564,10 +575,6 @@ footer {
 
   .seccion {
     display: none;
-  }
-
-  .btn_menu {
-    display: flex;
   }
 
   a {
@@ -687,6 +694,12 @@ footer {
     width: 100%;
   }
 
+  .navmenu {
+    grid-area: nav;
+    font-size: 25px;
+    font-family: sans-serif;
+  }
+
   #categoria {
     flex-direction: column;
     align-items: center;
@@ -694,20 +707,35 @@ footer {
     display: flex;
   }
 
+  .menubtn {
+    display: block;
+    cursor: pointer;
+  }
+
+  #abrirmenu:checked ~ .category_list {
+    right: 0;
+    position: relative;
+    transition: all 0.8s;
+    width: 75%;
+  }
+
   .category_list {
     display: initial;
     flex-direction: row;
-    width: 100%;
     scroll-snap-align: center;
+    position: fixed;
+    right: -100%;
+    transition: all 0s;
+    top: 30px;
   }
   .category_list .category_item {
     display: block;
     margin-bottom: 15px;
-    background-color: rgba(255, 2, 44, 0.233);
+    background-color: rgba(255, 2, 99, 0.719);
     text-align: center;
     text-decoration: solid;
     color: white;
-    transition: all 0.6s;
+    transition: all 0.4s;
     font-size: 16px;
     font-family: bold;
     border-radius: 15px;
@@ -717,7 +745,8 @@ footer {
     box-shadow: 10px 10px 14px 2px rgba(0, 0, 0, 0.47);
   }
   .category_list .ct_item-active {
-    background-color: rgba(133, 17, 75, 0.829);
+    background-color: rgb(133, 17, 75);
+    text-align: center;
   }
 
   #ocaciones {
