--- a/SASS/_responsive.scss
+++ b/SASS/_responsive.scss
@@ -180,6 +180,7 @@
 }
 
 #grid-area {
+	grid-row-gap: 2px;
 	flex-direction: column;
 	margin: 0%;
 	box-sizing: border-box;
@@ -205,9 +206,7 @@ header {
 .seccion {
 		display: none;
 	}
-	.btn_menu {
-		display: flex;
-	}
+
 	a {
 		text-decoration: none;
 		color: black;
@@ -316,25 +315,51 @@ header {
 nav {
 		width: 100%;
 }
+
+.navmenu {
+    grid-area: nav;
+    font-size: 25px;
+    font-family: sans-serif;
+}
 #categoria {
 		flex-direction: column;
 		align-items: center;
 		margin-top: 1%;
 		display: flex;
+		
 }
+
+.menubtn{ 
+	display: block;
+	cursor: pointer;
+
+}
+
+#abrirmenu:checked ~ .category_list {
+	right: 0;
+	position: relative;
+	transition: all 0.8s;
+	width: 75%;
+}
+
 .category_list {
 		display: initial;
 		flex-direction: row;
-		width: 100%;
+
 		scroll-snap-align: center;
+		position: fixed;
+		right: -100%;
+		transition: all 0s;
+		top: 30px;
+
 		.category_item {
 			display: block;
 			margin-bottom: 15px;
-			background-color: rgba(255, 2, 44, 0.233);
+			background-color: rgba(255, 2, 99, 0.719);
 			text-align: center;
 			text-decoration: solid;
 			color: white;
-			transition: all 0.6s;
+			transition: all 0.4s;
 			font-size: 16px;
 			font-family: bold;
 			border-radius: 15px;
@@ -344,7 +369,8 @@ nav {
 			}
 		}
 		.ct_item-active {
-			background-color: rgba(133, 17, 75, 0.829);
+			background-color: rgb(133, 17, 75);
+			text-align: center;
 		}
 }
 #ocaciones {
